home/log/20190307_114402.log
07/03/19 - 11:44:03.497 - Context.restart - Info - Initializing context
07/03/19 - 11:44:03.499 - DataManager.initialize - Info - Initializing DataManager
07/03/19 - 11:44:03.500 - DataManager.initialize - Info - Finished DataManager initialization
07/03/19 - 11:44:03.500 - Context.restart - Info - Loading Device Pool
07/03/19 - 11:44:03.500 - DevicePool.initialize - Info - Initializing DevicePool
07/03/19 - 11:44:03.506 - DevicePool.initializeDevices - Info - Initializing: IZero_Profile
07/03/19 - 11:44:03.545 - DevicePool.initializeDevices - Info - Initializing: U17_Gap_RBV
07/03/19 - 11:44:03.562 - DevicePool.initializeDevices - Info - Initializing: U17_Gap_Set
07/03/19 - 11:44:03.573 - DevicePool.initializeDevices - Info - Initializing: U17_Gap_Status
07/03/19 - 11:44:03.595 - DevicePool.initializeDevices - Info - Initializing: IZero
07/03/19 - 11:44:03.607 - DevicePool.initializeDevices - Info - Initializing: TFY_Profile
07/03/19 - 11:44:03.643 - DevicePool.initializeDevices - Info - Initializing: TFY
07/03/19 - 11:44:03.654 - DevicePool.initializeDevices - Info - Initializing: GE_AreaDet
07/03/19 - 11:44:03.793 - DevicePool.initializeDevices - Info - Initializing: GE_FrameID
07/03/19 - 11:44:03.793 - DevicePool.initializeDevices - Info - Initializing: GE_Raw_Imaging
07/03/19 - 11:44:03.794 - DevicePool.initializeDevices - Info - Initializing: GE_Raw_Array
07/03/19 - 11:44:03.794 - DevicePool.initializeDevices - Info - Initializing: GE_BG_Array
07/03/19 - 11:44:03.828 - DevicePool.initializeDevices - Info - Initializing: GE_BG_SizeY
07/03/19 - 11:44:03.828 - DevicePool.initializeDevices - Info - Initializing: GE_BG_SizeX
07/03/19 - 11:44:03.829 - DevicePool.initializeDevices - Info - Initializing: GE_ROI_Array
07/03/19 - 11:44:03.863 - DevicePool.initializeDevices - Info - Initializing: GE_ROI_SizeY
07/03/19 - 11:44:03.874 - DevicePool.initializeDevices - Info - Initializing: GE_ROI_SizeX
07/03/19 - 11:44:03.885 - DevicePool.initializeDevices - Info - Initializing: GE_ROI_Line
07/03/19 - 11:44:03.897 - DevicePool.initializeDevices - Info - Initializing: GE_Spectrum
07/03/19 - 11:44:03.931 - DevicePool.initializeDevices - Info - Initializing: GE_Spectrum_Sum
07/03/19 - 11:44:03.965 - DevicePool.initializeDevices - Info - Initializing: GE_Spectrum_Conv
07/03/19 - 11:44:03.976 - DevicePool.initializeDevices - Info - Initializing: GE_Sensor_Temp
07/03/19 - 11:44:03.988 - DevicePool.initializeDevices - Info - Initializing: Scan_Progress
07/03/19 - 11:44:03.999 - DevicePool.initializeDevices - Info - Initializing: Press_Diag_PV
07/03/19 - 11:44:04.010 - DevicePool.initializeDevices - Info - Initializing: Press_Diag_HV
07/03/19 - 11:44:04.022 - DevicePool.initializeDevices - Info - Initializing: Press_Spec_PV
07/03/19 - 11:44:04.033 - DevicePool.initializeDevices - Info - Initializing: Press_Spec_HV
07/03/19 - 11:44:04.045 - DevicePool.initializeDevices - Info - Initializing: Press_Sample_Ch
07/03/19 - 11:44:04.057 - DevicePool.initializeDevices - Info - Initializing: Diodes_Sum_Intensity
07/03/19 - 11:44:04.057 - DevicePool.initializeDevices - Info - Initializing: VH_Diode
07/03/19 - 11:44:04.058 - DevicePool.initializeDevices - Info - Initializing: SEC_el_x
07/03/19 - 11:44:04.145 - DevicePool.initializeDevices - Info - Initializing: SEC_el_y
07/03/19 - 11:44:04.233 - DevicePool.initializeDevices - Info - Initializing: SEC_el_y_Enc
07/03/19 - 11:44:04.234 - DevicePool.initializeDevices - Info - Initializing: SEC_el_x_Enc
07/03/19 - 11:44:04.234 - DevicePool.initializeDevices - Info - Initializing: Diode_1
07/03/19 - 11:44:04.244 - DevicePool.initializeDevices - Info - Initializing: Diode_2
07/03/19 - 11:44:04.256 - DevicePool.initializeDevices - Info - Initializing: Diode_3
07/03/19 - 11:44:04.271 - DevicePool.initializeDevices - Info - Initializing: Diode_4
07/03/19 - 11:44:04.282 - DevicePool.initializeDevices - Info - Initializing: Filter1
07/03/19 - 11:44:04.368 - DevicePool.initializeDevices - Info - Initializing: Filter2
07/03/19 - 11:44:04.456 - DevicePool.initializeDevices - Info - Initializing: BPM2_Vert_Profile
07/03/19 - 11:44:04.468 - DevicePool.initializeDevices - Info - Initializing: BPM2_Profile_Size
07/03/19 - 11:44:04.480 - DevicePool.initializeDevices - Info - Initializing: ring_current
07/03/19 - 11:44:04.492 - DevicePool.initializeDevices - Info - Initializing: GE_Trigger_PV
07/03/19 - 11:44:04.516 - GE_Trigger_PV.initialize - Warning - java.io.IOException: java.lang.ClassCastException: ch.psi.pshell.epics.ChannelDouble cannot be cast to ch.psi.pshell.epics.EpicsRegisterArray
Stack trace:
java.io.IOException: java.lang.ClassCastException: ch.psi.pshell.epics.ChannelDouble cannot be cast to ch.psi.pshell.epics.EpicsRegisterArray
	at ch.psi.pshell.epics.GenericArray.resolveType(GenericArray.java:88)
	at ch.psi.pshell.epics.GenericArray.doInitialize(GenericArray.java:121)
	at ch.psi.pshell.device.GenericDeviceBase.initialize(GenericDeviceBase.java:188)
	at ch.psi.pshell.core.DevicePool.initializeDevices(DevicePool.java:509)
	at ch.psi.pshell.core.DevicePool.initialize(DevicePool.java:43)
	at ch.psi.pshell.core.Context.restart(Context.java:985)
	at ch.psi.pshell.core.Context.restart(Context.java:2952)
	at ch.psi.pshell.ui.Task$Restart.doInBackground(Task.java:368)
	at ch.psi.pshell.ui.Task$Restart.doInBackground(Task.java:358)
	at javax.swing.SwingWorker$1.call(SwingWorker.java:295)
	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
	at javax.swing.SwingWorker.run(SwingWorker.java:334)
	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
	at java.lang.Thread.run(Thread.java:748)
Caused by: java.lang.ClassCastException: ch.psi.pshell.epics.ChannelDouble cannot be cast to ch.psi.pshell.epics.EpicsRegisterArray
	at ch.psi.pshell.epics.GenericArray.setType(GenericArray.java:71)
	at ch.psi.pshell.epics.GenericArray.resolveType(GenericArray.java:84)
	... 14 more

07/03/19 - 11:44:04.517 - DevicePool.initializeDevices - Severe - Error initializing: GE_Trigger_PV
07/03/19 - 11:44:04.747 - DevicePool.initialize - Info - Finished DevicePool initialization
07/03/19 - 11:44:04.749 - ScriptManager.<init> - Info - Initializing ScriptManager
07/03/19 - 11:44:04.752 - ScriptManager.<init> - Info - Finished ScriptManager initialization
07/03/19 - 11:44:05.001 - Context.lambda$restart$1 - Info - Executed startup script
07/03/19 - 11:44:05.091 - Context.lambda$restart$1 - Severe - javax.script.ScriptException: SyntaxError: no viable alternative at input 'for' in /home/epics/PShell/pshellcontrol/home/script/shared/blade_class.py at line number 37 at column number 24
Stack trace:
javax.script.ScriptException: SyntaxError: no viable alternative at input 'for' in /home/epics/PShell/pshellcontrol/home/script/shared/blade_class.py at line number 37 at column number 24
	at org.python.jsr223.PyScriptEngine.scriptException(PyScriptEngine.java:213)
	at org.python.jsr223.PyScriptEngine.eval(PyScriptEngine.java:59)
	at org.python.jsr223.PyScriptEngine.eval(PyScriptEngine.java:64)
	at javax.script.AbstractScriptEngine.eval(AbstractScriptEngine.java:249)
	at ch.psi.pshell.scripting.Interpreter.evalFile(Interpreter.java:137)
	at ch.psi.pshell.scripting.ScriptManager.evalFile(ScriptManager.java:191)
	at ch.psi.pshell.core.Context.lambda$restart$1(Context.java:1049)
	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
	at java.lang.Thread.run(Thread.java:748)
Caused by: Traceback (most recent call last):
  File "<script>", line 7, in <module>
  File "<script>", line 1641, in run
  File "/home/epics/PShell/pshellcontrol/home/script/shared/blade_class.py", line 37
    dt = [-i in for i in dt]
               ^
SyntaxError: no viable alternative at input 'for'

	at org.python.core.PyException.doRaise(PyException.java:233)
	at org.python.core.Py.makeException(Py.java:1565)
	at org.python.core.Py.makeException(Py.java:1569)
	at org.python.core.Py.makeException(Py.java:1573)
	at org.python.pycode._pyx1119.run$134(<script>:1642)
	at org.python.pycode._pyx1119.call_function(<script>)
	at org.python.core.PyTableCode.call(PyTableCode.java:171)
	at org.python.core.PyBaseCode.call(PyBaseCode.java:308)
	at org.python.core.PyBaseCode.call(PyBaseCode.java:132)
	at org.python.core.PyFunction.__call__(PyFunction.java:413)
	at org.python.pycode._pyx1120.f$0(<script>:16)
	at org.python.pycode._pyx1120.call_function(<script>)
	at org.python.core.PyTableCode.call(PyTableCode.java:171)
	at org.python.core.PyCode.call(PyCode.java:18)
	at org.python.core.Py.runCode(Py.java:1614)
	at org.python.core.__builtin__.eval(__builtin__.java:497)
	at org.python.core.__builtin__.eval(__builtin__.java:501)
	at org.python.util.PythonInterpreter.eval(PythonInterpreter.java:259)
	at org.python.jsr223.PyScriptEngine.eval(PyScriptEngine.java:57)
	... 9 more

07/03/19 - 11:45:10.537 - Context.onCommand - Info - Restart (ui)
